better concurrency for harvester